--- a/Vistas/Styles/Dictionary1.xaml
+++ b/Vistas/Styles/Dictionary1.xaml
@@ -85,6 +85,108 @@
     </Style>
 
 
+<Style TargetType="{x:Type Button}" x:Key="BotondeMesaPagando">
+        <Style.Setters>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Button Background="Olive" Margin="10,5">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="80*" />
+                                    <RowDefinition Height="220*" />
+                                </Grid.RowDefinitions>
+                                <TextBlock FontFamily="Arial" Foreground="Black" Height="Auto" HorizontalAlignment="Center" Name="textBlock1" Text="{TemplateBinding Content}" FontSize="15" VerticalAlignment="Stretch"/>
+                                <Image Grid.Row="1" Name="image1" Source="/Vistas;component/Images/mesita.png"/>
+                            </Grid>
+                        </Button>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style.Setters>
+    </Style>
+
+<Style TargetType="{x:Type Button}" x:Key="BotondeMesaEsperandoCuenta">
+        <Style.Setters>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Button Background="RoyalBlue" Margin="10,5">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="80*" />
+                                    <RowDefinition Height="220*" />
+                                </Grid.RowDefinitions>
+                                <TextBlock FontFamily="Arial" Foreground="Black" Height="Auto" HorizontalAlignment="Center" Name="textBlock1" Text="{TemplateBinding Content}" FontSize="15" VerticalAlignment="Stretch"/>
+                                <Image Grid.Row="1" Name="image1" Source="/Vistas;component/Images/mesita.png"/>
+                            </Grid>
+                        </Button>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style.Setters>
+    </Style>
+<Style TargetType="{x:Type Button}" x:Key="BotondeMesaServidos">
+        <Style.Setters>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Button Background="Salmon" Margin="10,5">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="80*" />
+                                    <RowDefinition Height="220*" />
+                                </Grid.RowDefinitions>
+                                <TextBlock FontFamily="Arial" Foreground="Black" Height="Auto" HorizontalAlignment="Center" Name="textBlock1" Text="{TemplateBinding Content}" FontSize="15" VerticalAlignment="Stretch"/>
+                                <Image Grid.Row="1" Name="image1" Source="/Vistas;component/Images/mesita.png"/>
+                            </Grid>
+                        </Button>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style.Setters>
+    </Style>
+    <Style TargetType="{x:Type Button}" x:Key="BotondeMesaPidiendo">
+        <Style.Setters>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Button Background="Fuchsia" Margin="10,5">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="80*" />
+                                    <RowDefinition Height="220*" />
+                                </Grid.RowDefinitions>
+                                <TextBlock FontFamily="Arial" Foreground="Black" Height="Auto" HorizontalAlignment="Center" Name="textBlock1" Text="{TemplateBinding Content}" FontSize="15" VerticalAlignment="Stretch"/>
+                                <Image Grid.Row="1" Name="image1" Source="/Vistas;component/Images/mesita.png"/>
+                            </Grid>
+                        </Button>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style.Setters>
+    </Style>
+    <Style TargetType="{x:Type Button}" x:Key="BotondeMesaReservada">
+        <Style.Setters>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Button Background="Orange" Margin="10,5">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="80*" />
+                                    <RowDefinition Height="220*" />
+                                </Grid.RowDefinitions>
+                                <TextBlock FontFamily="Arial" Foreground="Black" Height="Auto" HorizontalAlignment="Center" Name="textBlock1" Text="{TemplateBinding Content}" FontSize="15" VerticalAlignment="Stretch"/>
+                                <Image Grid.Row="1" Name="image1" Source="/Vistas;component/Images/mesita.png"/>
+                            </Grid>
+                        </Button>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style.Setters>
+    </Style>
+
 
 
     <Style TargetType="{x:Type Button}" x:Key="BotonAgregar">
